--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
     "require": {
         "php": ">=5.6.4",
         "laravel/framework": "5.3.*",
-        "owen-it/laravel-auditing": "^4.1"
+        "laravelcollective/html": "^5.2.0",
+        "owen-it/laravel-auditing": "^4.1",
+        "uxweb/sweet-alert": "^1.4"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
